# sdl_game

./: CMakeLists.txt
include/: GameObject.h  GameScreen.h
src/: GameObject.cpp  GameScreen.cpp  main.cpp
